--- a/index.html
+++ b/index.html
@@ -5,40 +5,137 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Flori de vânzare 🌸</title>
 <style>
-body {margin:0;font-family:Arial,sans-serif;background:linear-gradient(to bottom,#fdf1f5,#ffe6f0);color:#222;}
-header{background:#ff4081;color:white;padding:30px 10px;text-align:center;}
-header h1{font-size:2.5em;margin:0;}
-nav{display:flex;justify-content:center;flex-wrap:wrap;background:#f50057;}
-nav a{padding:15px 25px;color:white;text-decoration:none;font-weight:bold;}
-nav a:hover{background:#c51162;transform:scale(1.05);}
-section{display:none;padding:40px 20px;}
+/* GLOBAL STYLING */
+body {
+  margin:0;
+  font-family:Arial,sans-serif;
+  background: linear-gradient(135deg,#ffe6f0,#ffd1dc,#ffb3c6,#ffe6f0);
+  color:#222;
+  transition: background 1s;
+}
+header{
+  background:#ff4081;
+  color:white;
+  padding:30px 10px;
+  text-align:center;
+  box-shadow:0 4px 15px rgba(0,0,0,0.2);
+}
+header h1{font-size:2.5em;margin:0;text-shadow:1px 1px 3px #000;}
+nav{display:flex;justify-content:center;flex-wrap:wrap;background:#f50057;box-shadow:0 2px 10px rgba(0,0,0,0.2);}
+nav a{
+  padding:15px 25px;
+  color:white;
+  text-decoration:none;
+  font-weight:bold;
+  transition:0.3s;
+}
+nav a:hover{
+  background:#c51162;
+  transform:scale(1.1);
+  box-shadow:0 4px 15px rgba(0,0,0,0.3);
+}
+section{
+  display:none;
+  padding:40px 20px;
+  animation:fadeIn 1s;
+}
 section.active{display:block;}
-.products{display:grid;gap:20px;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));}
-.card{background:linear-gradient(to bottom right,#ff80ab,#ff4081);border-radius:15px;overflow:hidden;text-align:center;transition:transform 0.3s;position:relative;}
-.card:hover{transform:translateY(-5px);}
-.card img{width:100%;height:180px;object-fit:cover;border-bottom:2px solid white;}
-.card h3,.card p{margin:10px 0;color:white;}
-button{margin:5px;padding:8px 12px;border:none;border-radius:5px;background:#ff1744;color:white;font-weight:bold;cursor:pointer;transition:0.2s;position:relative;}
-button:active{transform:scale(1.1);}
-#cartIcon{position:fixed;top:20px;right:20px;width:60px;height:60px;background:#ff4081;color:white;border-radius:50%;display:flex;align-items:center;justify-content:center;cursor:pointer;font-size:1.5em;z-index:1000;}
-#cartCount{position:absolute;top:5px;right:5px;background:white;color:#ff4081;border-radius:50%;width:20px;height:20px;font-size:12px;display:flex;align-items:center;justify-content:center;transition:transform 0.3s;}
-#cartPanel{position:fixed;top:0;right:-400px;width:400px;height:100%;background:white;box-shadow:-4px 0 20px rgba(0,0,0,0.3);padding:20px;overflow-y:auto;transition:right 0.5s ease;z-index:999;}
+.products{
+  display:grid;
+  gap:20px;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+}
+.card{
+  background:linear-gradient(135deg,#ff80ab,#ff4081,#ff1e62);
+  border-radius:20px;
+  overflow:hidden;
+  text-align:center;
+  box-shadow:0 6px 20px rgba(0,0,0,0.25);
+  transition:transform 0.4s,box-shadow 0.4s;
+  position:relative;
+}
+.card:hover{
+  transform:translateY(-10px) scale(1.05) rotate(-1deg);
+  box-shadow:0 12px 25px rgba(0,0,0,0.35);
+}
+.card img{
+  width:100%;
+  height:180px;
+  object-fit:cover;
+  border-bottom:2px solid white;
+  transition: transform 0.5s;
+}
+.card img:hover{
+  transform:scale(1.1);
+}
+.card h3, .card p{
+  margin:10px 0;
+  color:white;
+  text-shadow:1px 1px 2px #000;
+}
+button{
+  margin:5px;
+  padding:10px 15px;
+  border:none;
+  border-radius:8px;
+  background:#ff1744;
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+  transition:0.3s;
+  box-shadow:0 4px 10px rgba(0,0,0,0.2);
+}
+button:hover{
+  background:#d50000;
+  transform:scale(1.1) rotate(-2deg);
+  box-shadow:0 8px 15px rgba(0,0,0,0.3);
+}
+
+/* CART */
+#cartIcon{
+  position:fixed; top:20px; right:20px; width:60px; height:60px; background:#ff4081; color:white; border-radius:50%;
+  display:flex; align-items:center; justify-content:center; cursor:pointer; font-size:1.8em; z-index:1000;
+  box-shadow:0 4px 15px rgba(0,0,0,0.3);
+}
+#cartCount{
+  position:absolute; top:5px; right:5px; background:white; color:#ff4081; border-radius:50%; width:22px; height:22px;
+  font-size:13px; display:flex; align-items:center; justify-content:center; font-weight:bold; transition:transform 0.3s;
+}
+#cartPanel{
+  position:fixed; top:0; right:-400px; width:400px; height:100%; background:white; box-shadow:-4px 0 20px rgba(0,0,0,0.3);
+  padding:20px; overflow-y:auto; transition:right 0.5s ease; z-index:999; border-radius:20px 0 0 20px;
+}
 #cartPanel.open{right:0;}
-.cart-item{display:flex;align-items:center;margin-bottom:10px;border-bottom:1px solid #eee;padding-bottom:10px;}
-.cart-item img{width:50px;height:50px;object-fit:cover;border-radius:8px;margin-right:10px;}
+.cart-item{
+  display:flex; align-items:center; margin-bottom:12px; border-bottom:1px solid #eee; padding-bottom:10px;
+}
+.cart-item img{
+  width:50px; height:50px; object-fit:cover; border-radius:10px; margin-right:10px;
+}
 .cart-item .info{flex:1;}
-.cart-item .qty-controls{display:flex;gap:5px;}
-.cart-item .qty-controls button{background:#ff4081;color:white;border:none;padding:2px 6px;border-radius:4px;cursor:pointer;}
-.cart,form{background:white;padding:20px;border-radius:15px;max-width:600px;margin:auto;box-shadow:0 6px 15px rgba(0,0,0,0.1);}
-input,select,textarea{width:100%;padding:8px;margin:6px 0;border:1px solid #ccc;border-radius:5px;}
-footer{text-align:center;padding:15px;background:#f50057;color:white;margin-top:40px;}
-@media(max-width:600px){nav a{padding:10px;}.card img{height:150px;}#cartPanel{width:80%;}}
-.flyImg{position:fixed;width:100px;height:100px;object-fit:cover;border-radius:15px;z-index:1000;pointer-events:none;transition:all 0.8s ease-in-out;}
-.pulse{animation:pulseAnim 0.3s;}
-@keyframes pulseAnim{0%{transform:scale(1);}50%{transform:scale(1.3);}100%{transform:scale(1);}}
-/* TOOLTIP CU SAGEATA */
-.mini-cart-preview{position:fixed;background:white;color:#222;padding:5px 10px;border-radius:8px;box-shadow:0 2px 10px rgba(0,0,0,0.3);white-space:nowrap;display:none;pointer-events:none;z-index:10000;transition:transform 0.1s;}
-.mini-cart-preview::after{content:"";position:absolute;width:0;height:0;border-left:6px solid transparent;border-right:6px solid transparent;border-top:6px solid white;bottom:-6px;left:10px;}
+.cart-item .qty-controls{
+  display:flex; gap:5px;
+}
+.cart-item .qty-controls button{
+  background:#ff4081;color:white;border:none;padding:3px 8px;border-radius:5px;cursor:pointer;
+}
+.flyImg{
+  position:fixed; width:100px; height:100px; object-fit:cover; border-radius:15px; z-index:1000; pointer-events:none;
+  transition:all 0.8s ease-in-out;
+}
+
+/* FOOTER */
+footer{
+  text-align:center; padding:15px; background:#f50057; color:white; margin-top:40px;
+}
+
+/* ANIMATII */
+@keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
+@media(max-width:600px){
+  nav a{padding:10px;}
+  .card img{height:150px;}
+  #cartPanel{width:80%;}
+}
 </style>
 </head>
 <body>
@@ -58,39 +155,97 @@ footer{text-align:center;padding:15px;background:#f50057;color:white;margin-top:
 
 <section id="home" class="active">
   <h2>🌸 Bine ai venit!</h2>
-  <p>Descoperă flori proaspete și colorate!</p>
+  <p>Descoperă flori proaspete și colorate, cu energie pozitivă!</p>
 </section>
 
 <section id="welcome">
   <h2>🌞 Bun venit în lumea florilor! 🌸</h2>
-  <p>Aici găsești culori, parfum și energie pozitivă! 💐</p>
+  <p>Fiecare floare e aleasă cu grijă și dragoste! 💐</p>
 </section>
 
 <section id="catalog">
   <h2>🌼 Catalog Flori</h2>
   <div class="products">
+    <!-- TOATE FLORILE, cu poze reale -->
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?w=400">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Rose_Red_1.jpg/400px-Rose_Red_1.jpg">
       <h3>Trandafiri</h3><p>50 lei</p>
-      <button onmousemove="moveMiniPreview(event,this,'Trandafiri')" onmouseover="showMiniPreview(this,'Trandafiri')" onmouseout="hideMiniPreview()" onclick="add('Trandafiri',50,event)">Adaugă</button>
+      <button onclick="add('Trandafiri',50,event)">Adaugă</button>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1490750967868-88aa4486c946?w=400">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Tulipa_gesneriana_Lawrence.JPG/400px-Tulipa_gesneriana_Lawrence.JPG">
       <h3>Lalele</h3><p>40 lei</p>
-      <button onmousemove="moveMiniPreview(event,this,'Lalele')" onmouseover="showMiniPreview(this,'Lalele')" onmouseout="hideMiniPreview()" onclick="add('Lalele',40,event)">Adaugă</button>
+      <button onclick="add('Lalele',40,event)">Adaugă</button>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1501004318641-b39e6451bec6?w=400">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Phalaenopsis_JPEG.png/400px-Phalaenopsis_JPEG.png">
       <h3>Orhidee</h3><p>70 lei</p>
-      <button onmousemove="moveMiniPreview(event,this,'Orhidee')" onmouseover="showMiniPreview(this,'Orhidee')" onmouseout="hideMiniPreview()" onclick="add('Orhidee',70,event)">Adaugă</button>
+      <button onclick="add('Orhidee',70,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e8/Field_Bouquet.jpg/400px-Field_Bouquet.jpg">
+      <h3>Buchet mixt</h3><p>60 lei</p>
+      <button onclick="add('Buchet mixt',60,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/Chrysanthemum_white.JPG/400px-Chrysanthemum_white.JPG">
+      <h3>Crizanteme</h3><p>45 lei</p>
+      <button onclick="add('Crizanteme',45,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Carnation-flower.jpg/400px-Carnation-flower.jpg">
+      <h3>Garoafe</h3><p>35 lei</p>
+      <button onclick="add('Garoafe',35,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Marguerite_Daisy.jpg">
+      <h3>Margarete</h3><p>30 lei</p>
+      <button onclick="add('Margarete',30,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Lilium_lancifolium_Orange.JPG/400px-Lilium_lancifolium_Orange.JPG">
+      <h3>Crini</h3><p>55 lei</p>
+      <button onclick="add('Crini',55,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Wildflowers.jpg">
+      <h3>Flori de câmp</h3><p>25 lei</p>
+      <button onclick="add('Flori de câmp',25,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2b/Orchid_pink.jpg">
+      <h3>Orhidee roz</h3><p>75 lei</p>
+      <button onclick="add('Orhidee roz',75,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Paeonia_lactiflora.jpg">
+      <h3>Bujori</h3><p>80 lei</p>
+      <button onclick="add('Bujori',80,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Lilium_candidum.jpg">
+      <h3>Crini albi</h3><p>60 lei</p>
+      <button onclick="add('Crini albi',60,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Galanthus_nivalis_001.JPG/400px-Galanthus_nivalis_001.JPG">
+      <h3>Ghiocel</h3><p>20 lei</p>
+      <button onclick="add('Ghiocel',20,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d6/Viola_tricolor_001.JPG/400px-Viola_tricolor_001.JPG">
+      <h3>Violete</h3><p>15 lei</p>
+      <button onclick="add('Violete',15,event)">Adaugă</button>
+    </div>
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Jasminum_officinale2.jpg/400px-Jasminum_officinale2.jpg">
+      <h3>Iasomie</h3><p>35 lei</p>
+      <button onclick="add('Iasomie',35,event)">Adaugă</button>
     </div>
   </div>
 </section>
 
-<section id="promo">
-  <h2>🔥 Promoții</h2>
-  <p>Toate trandafirii -10% până la sfârșitul lunii!</p>
-</section>
+<section id="promo"><h2>🔥 Promoții</h2><p>Toate trandafirii -10% până la sfârșitul lunii!</p></section>
 
 <section id="order">
   <h2>📦 Finalizare comandă</h2>
@@ -117,13 +272,11 @@ footer{text-align:center;padding:15px;background:#f50057;color:white;margin-top:
   </form>
 </section>
 
-<section id="about">
-  <h2>💐 Despre noi</h2>
-  <p>Suntem o florărie online cu flori proaspete și livrare rapidă. Echipa noastră iubește florile!</p>
-</section>
+<section id="about"><h2>💐 Despre noi</h2><p>Suntem o florărie online cu flori proaspete și livrare rapidă!</p></section>
 
 <footer>© 2026 Flori de vânzare 🌸</footer>
 
+<!-- COȘ -->
 <div id="cartIcon">🛒<span id="cartCount">0</span></div>
 <div id="cartPanel">
   <h2>🛒 Coșul tău</h2>
@@ -131,8 +284,6 @@ footer{text-align:center;padding:15px;background:#f50057;color:white;margin-top:
   <p id="cartTotal">Total: 0 lei</p>
   <button onclick="clearCart()">Golește coș</button>
 </div>
-
-<div id="miniPreview" class="mini-cart-preview"></div>
 
 <script>
 function show(id){document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));document.getElementById(id).classList.add("active");}
@@ -157,14 +308,12 @@ function updateCartDisplay(){
   const countElem=document.getElementById("cartCount");
   countElem.textContent=cart.reduce((s,i)=>s+i.qty,0);
   document.getElementById("cartTotal").textContent="Total: "+total+" lei";
-  countElem.classList.add("pulse");setTimeout(()=>countElem.classList.remove("pulse"),300);
-  document.getElementById("cartTotal").classList.add("pulse");setTimeout(()=>document.getElementById("cartTotal").classList.remove("pulse"),300);
 }
 function changeQty(index,delta){cart[index].qty+=delta;if(cart[index].qty<=0)cart.splice(index,1);save();updateCartDisplay();}
 function add(name,price,event){
   const img=event.target.parentElement.querySelector("img").src;
   let item=cart.find(x=>x.name==name);if(item)item.qty++;else cart.push({name,price,qty:1,img});
-  save();updateCartDisplay();animateToCart(event);bounceButton(event.target);openCart();
+  save();updateCartDisplay();animateToCart(event);
 }
 function animateToCart(event){
   const img=event.target.parentElement.querySelector("img");if(!img)return;
@@ -172,30 +321,30 @@ function animateToCart(event){
   const rect=img.getBoundingClientRect();clone.style.left=rect.left+"px";clone.style.top=rect.top+"px";clone.style.width=rect.width+"px";clone.style.height=rect.height+"px";
   document.body.appendChild(clone);
   const cartIcon=document.getElementById("cartIcon").getBoundingClientRect();
-  setTimeout(()=>{clone.style.left=cartIcon.left+"px";clone.style.top=cartIcon.top+"px";clone.style.width="0px";clone.style.height="0px";clone.style.opacity=0;},50);
-  setTimeout(()=>clone.remove(),900);
-}
-function bounceButton(btn){btn.style.transform="scale(1.2)";setTimeout(()=>btn.style.transform="scale(1)",200);}
-const cartPanel=document.getElementById("cartPanel");
-function openCart(){cartPanel.classList.add("open");}
-document.getElementById("cartIcon").addEventListener("click",()=>{cartPanel.classList.toggle("open");});
-function clearCart(){cart=[];save();updateCartDisplay();}
-updateCartDisplay();
-function fillProducts(){document.getElementById("products").value=cart.map(i=>i.name+" x"+i.qty).join(", ")+"\nTotal: "+cart.reduce((s,i)=>s+i.price*i.qty,0)+" lei";setTimeout(()=>{document.getElementById("successMessage").style.display="block";},100);}
+  setTimeout(()=>{clone.style.left=cartIcon.left+"px";clone.style.top=cartIcon.top+"px";clone.style.width="0px";clone.style.height="0px";clone
 
-// MINI PREVIEW FOLLOW MOUSE CU SAGEATA
-const miniPreview=document.getElementById("miniPreview");
-function showMiniPreview(btn,name){miniPreview.style.display="block";updateMiniText(name);}
-function moveMiniPreview(e,btn,name){
-  miniPreview.style.left=e.pageX+15+"px";
-  miniPreview.style.top=e.pageY+15+"px";
-  updateMiniText(name);
+setTimeout(()=>{clone.style.left=cartIcon.left+"px";clone.style.top=cartIcon.top+"px";clone.style.width="0px";clone.style.height="0px";clone.style.opacity="0";},50);
+  setTimeout(()=>{clone.remove();},850);
 }
-function hideMiniPreview(){miniPreview.style.display="none";}
-function updateMiniText(name){
-  const item=cart.find(i=>i.name===name);
-  miniPreview.textContent=item?`${name} x${item.qty} în coș`:`${name} - produs nou în coș`;
+
+// Deschide/închide panoul coșului
+document.getElementById("cartIcon").addEventListener("click",()=>{
+  document.getElementById("cartPanel").classList.toggle("open");
+});
+
+// Golește coșul
+function clearCart(){cart=[];save();updateCartDisplay();}
+
+// Completare produse în formular comandă
+function fillProducts(){
+  document.getElementById("products").value=
+    cart.map(i=>i.name+" x"+i.qty).join(", ")+
+    "\nTotal: "+cart.reduce((s,i)=>s+i.price*i.qty,0)+" lei";
+  setTimeout(()=>{document.getElementById("successMessage").style.display="block";},100);
 }
+
+// Inițializare coș la încărcare
+updateCartDisplay();
 </script>
 
 </body>
